# facematch_interno

./: .gitignore  README.md  pyproject.toml
base/: filtered_scored_data.csv
facematch/: Facematch.py  facedetector.py  functions.py
notebooks/: check_parquet.ipynb  pre_processing copy.ipynb  respostas_reais.txt  see_images.ipynb  test.ipynb  understand_data.ipynb
src/: settings.yaml
src/facematch/: manifest.yaml
src/facematch/inference/: inference.py
src/facematch/inference/model_register/: __init__.py  inference.py  requirements.txt
src/facematch/inference/model_register/facematch/: distance.py  facenet.py  vgg_face.py
testes/: benchmark.py  benchmark.txt  fix_erros.py  test_teste.py
